--- a/sports.html
+++ b/sports.html
@@ -116,9 +116,8 @@
 			<h1>Sports</h1>
 			<p>My favorite sport to play is volleyball.  I play for a club team and hope to make the school team this coming year.  I play outside hitter/defensive specialist.  My favorite sport to watch is football.  My favorite team is the Seattle Seahawks.  I enjoy every sport, but those are my favorite to watch and play.<br>
 			<img src = "https://cdn.shopify.com/s/files/1/0712/4751/products/VX5EC-203A_Front_2000x.png?v=1574878254" height = 300px width = 300px> 
-			<video width="300" height="300" controls>
-  				<source src="https://www.youtube.com/watch?v=TKQ3oG2LTTE" type="video/mp4">
-			</video>		
+			<video src= "https://www.youtube.com/watch?v=TKQ3oG2LTTE" type="video/mp4" controls>
+			</video> 		
 			</center>
 			
 		</p>
